fix: routing to auth;corrected landin on mobile

--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -47,12 +47,11 @@ svg {
    @media all and (max-width: 900px) {
         .cont {
             position: fixed;
-            top: 0;
-            left: 0;
+            left: 50%;
             width: 100%;
             height: 100%;
             display: flex;
-            justify-content: center; 
-            align-items: center; 
+            justify-content: center;
+            align-items: center;
         }
    }
