--- a/src/app/modules/authorization/login/login.component.scss
+++ b/src/app/modules/authorization/login/login.component.scss
@@ -1,4 +1,9 @@
-
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .backdrop-filter {
   position: absolute;
