--- a/src/app/modules/authorization/signup/signup.component.scss
+++ b/src/app/modules/authorization/signup/signup.component.scss
@@ -4,3 +4,9 @@
     width: 20px;
 }
 
+.container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
